# src/controllers/auth.js
@@ -1,0 +1,17 @@
+const express = require("express");
+const { request, response } = require("express");
+const authService = require("../services/authService");
+const Success = require("../handlers/successHandler");
+
+const login = async (req = request, res = response, next) => {
+    const { email, password } = req.body;
+    try {
+        res.json(new Success(await authService.login(email, password)))
+    } catch (error) {
+        next(error);
+    }
+}
+
+module.exports = {
+    login
+};
