# src/loaders/swagger/swagger.json
@@ -1,23 +1,23 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "API Rest base repo.",
-    "description": "## This is a base api to start new projects.",
-    "version": "0.0.1",
+    "title": "Users and products Api",
+    "description": "## This is an api for users and products",
+    "version": "1.0.0",
     "contact": {
-      "email": "fervaldes11@gmail.com"
+      "email": "salikintres2001@gmail.com"
     }
   },
 
-  "servers":[
+  "servers": [
     {
-      "url":"http://localhost:4000/api/v1",
-      "description": "Desarrollo" 
+      "url": "http://localhost:3000/api/v1",
+      "description": "Development"
     },
     {
-      "url":"https://node-06-restserver.herokuapp.com/api/v1",
-      "description": "Producción" 
-    } 
+      "url": "",
+      "description": "Production"
+    }
   ],
   "tags": [
     {
@@ -28,21 +28,77 @@
   "paths": {
     "/users/": {
       "get": {
-        "tags": [
-          "users"
+        "parameters": [
+          {
+            "in": "query",
+            "name": "filter[firstName]",
+            "description": "Filter users by first name.",
+            "required": false,
+            "Schema": {
+              "type": "string"
+            }
+          },
+          {
+            "in": "query",
+            "name": "filter[lastName]",
+            "description": "Filter users by last name.",
+            "required": false,
+            "Schema": {
+              "type": "string"
+            }
+          },
+          {
+            "in": "query",
+            "name": "filter[birthdate]",
+            "description": "Filter users by birthdate.",
+            "required": false,
+            "Schema": {
+              "type": "date"
+            }
+          },
+          {
+            "in": "query",
+            "name": "options[limit]",
+            "description": "The limit of users displayed (Use it for pagination).",
+            "required": false,
+            "Schema": {
+              "type": "string"
+            }
+          },
+          {
+            "in": "query",
+            "name": "options[offset]",
+            "description": "index to start the search of users (Use it for pagination).",
+            "required": false,
+            "Schema": {
+              "type": "string"
+            }
+          }
         ],
-        "summary": "Get a list of all existing users.",
-        "description": "",
+        "tags": ["users"],
+        "summary": "Return a list of existing users",
+        "description": "# Service for retrieve users by parameters with pagination\n - For the pagination, you need send offset and limit parameters.",
         "responses": {
           "200": {
-            "description": "The array of users in JSON format.",
+            "description": "A JSON Array of users.",
             "content": {
-              "application/json":{
-                "schema":{
+              "application/json": {
+                "schema": {
                   "type": "array",
-                  "items":{
+                  "items": {
                     "$ref": "#/components/schemas/User"
                   }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Error message in JSON",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/ErrorDB"
                 }
               }
             }
@@ -50,16 +106,14 @@
         }
       },
       "post": {
-        "tags": [
-          "users"
-        ],
+        "tags": ["users"],
         "summary": "Create a new user.",
         "description": "",
         "requestBody": {
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/User"
+                "$ref": "#/components/schemas/UserCreateAndUpdate"
               }
             }
           }
@@ -67,25 +121,98 @@
         "responses": {
           "201": {
             "description": "User created."
+          },
+          "400": {
+            "description": "Error message in JSON",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/RequestError"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Error message in JSON",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/ErrorDB"
+                }
+              }
+            }
           }
         }
       }
     },
     "/users/{id}": {
-      "put": {
-        "tags": [
-          "users"
-        ],
-        "summary": "Update an existing user by providing the id.",
+      "get": {
+        "tags": ["users"],
+        "summary": "Return a list of users providing an existing id.",
         "description": "",
-        "parameters":[
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "The id of the user you want to see.",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A JSON Array of users.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/User"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Error message in JSON",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/RequestError"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Error message in JSON",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/ErrorDB"
+                }
+              }
+            }
+          }
+        }
+      },
+      "put": {
+        "tags": ["users"],
+        "summary": "Update an existing user by providing the correct id.",
+        "description": "",
+        "parameters": [
           {
             "name": "id",
             "in": "path",
             "description": "The id of the user that needs to be updated.",
             "required": true,
             "schema": {
-              "type":"integer"
+              "type": "string"
             }
           }
         ],
@@ -93,19 +220,41 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/User"
+                "$ref": "#/components/schemas/UserCreateAndUpdate"
               }
             }
           }
         },
         "responses": {
-          "200": {
-            "description": "The user updated",
-            "content":{
-              "application/json":{
-                "schema":{
+          "201": {
+            "description": "User updated",
+            "content": {
+              "application/json": {
+                "schema": {
                   "type": "object",
                   "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Error message in JSON",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/RequestError"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Error message in JSON",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/ErrorDB"
                 }
               }
             }
@@ -113,25 +262,45 @@
         }
       },
       "delete": {
-        "tags": [
-          "users"
-        ],
-        "summary": "Delete an existing user by providing the id.",
+        "tags": ["users"],
+        "summary": "Delete an existing user by providing the correct id.",
         "description": "",
-        "parameters":[
+        "parameters": [
           {
             "name": "id",
             "in": "path",
             "description": "The id of the user that needs to be deleted.",
             "required": true,
             "schema": {
-              "type":"integer"
+              "type": "string"
             }
           }
         ],
         "responses": {
           "200": {
             "description": "User deleted."
+          },
+          "400": {
+            "description": "Error message in JSON",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/RequestError"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Error message in JSON",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/ErrorDB"
+                }
+              }
+            }
           }
         }
       }
@@ -140,20 +309,119 @@
   "components": {
     "schemas": {
       "User": {
-        "required": [
-          "id"
-        ],
+        "required": ["id"],
         "type": "object",
         "properties": {
-          "id":{
-            "description": "The user id.",
-            "type": "integer",
-            "example": "3"
+          "role": {
+            "description": "The user role",
+            "type": "string",
+            "example": "Default value: USER"
           },
-          "name":{
-            "description": "The user name.",
-            "type":"string",
-            "example":"Adrian"
+          "enable": {
+            "description": "User is enabled?",
+            "type": "boolean",
+            "example": "true"
+          },
+          "_id": {
+            "description": "The user id.",
+            "type": "string",
+            "example": "25acd789def..."
+          },
+          "firstName": {
+            "description": "The user first name.",
+            "type": "string",
+            "example": "Eduard"
+          },
+          "lastName": {
+            "description": "The user last name.",
+            "type": "string",
+            "example": "Cruz"
+          },
+          "email": {
+            "description": "The user email.",
+            "type": "string",
+            "example": "example@mail.com"
+          },
+          "password": {
+            "description": "The user password.",
+            "type": "string",
+            "example": "$2b$10$om4Aa5l2.QdSip87EdJM"
+          },
+          "birthdate": {
+            "description": "The user birthdate.",
+            "type": "date",
+            "example": "MM-DD-YYYY -> 12-31-1989"
+          },
+          "createdAt": {
+            "description": "date of the user creation.",
+            "type": "date",
+            "example": "YY-MM-DD -> 1989-12-31"
+          },
+          "updatedAt": {
+            "description": "date of the user update.",
+            "type": "date",
+            "example": "YY-MM-DD -> 1989-12-31"
+          }
+        }
+      },
+      "UserCreateAndUpdate": {
+        "required": ["id"],
+        "type": "object",
+        "properties": {
+          "firstName": {
+            "description": "The user first name.",
+            "type": "string",
+            "example": "Eduard"
+          },
+          "lastName": {
+            "description": "The user last name.",
+            "type": "string",
+            "example": "Cruz"
+          },
+          "email": {
+            "description": "The user email.",
+            "type": "string",
+            "example": "example@email.com"
+          },
+          "password": {
+            "description": "The user password.",
+            "type": "string",
+            "example": "Your password"
+          },
+          "birthdate": {
+            "description": "The user birthdate.",
+            "type": "date",
+            "example": "MM-DD-YYYY -> 12/31/1989"
+          }
+        }
+      },
+      "RequestError": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "description": "Error code",
+            "type": "integer",
+            "example": "400"
+          },
+          "message": {
+            "description": "Error message",
+            "type": "string",
+            "example": "Validation Errors: Invalid id, invalid email, etc"
+          }
+        }
+      },
+      "ErrorDB": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "description": "Error code",
+            "type": "integer",
+            "example": "500"
+          },
+          "message": {
+            "description": "Error message",
+            "type": "string",
+            "example": "Search failed: description of the error"
           }
         }
       }
